Added new endpoint for getting PriceOfferTemplates for user and for shared with. Added correct modelmapper to PriceOfferTemplateController.
